# q2doc

./: .gitignore  Makefile  pyproject.toml
q2doc/: __init__.py  __main__.py  cache.py  common.py  directives.py  myst.py
q2doc/directives/: __init__.py  common.py  describe_action.py  describe_artifact.py  describe_format.py  describe_plugin.py  describe_usage.py
q2doc/drivers/: common.py  execution.py  galaxy.py  python.py  q2cli.py  r.py
q2doc/transforms/: __init__.py  common.py  transform_usage.py
